# If not stated otherwise in this file or this component's license file the
# following copyright and licenses apply:
#
# Copyright 2018 RDK Management
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

include(GoogleTest)

add_subdirectory(IPProfileInfo)
add_subdirectory(IPHTTPStatistics)
add_subdirectory(VideoCMCDHeaders)
add_subdirectory(AudioCMCDHeaders)
add_subdirectory(CMCDHeaders)
add_subdirectory(IPFragmentStatistics)
add_subdirectory(ManifestGenericStats)
add_subdirectory(SubtitleCMCDHeaders)
add_subdirectory(IPLatencyReport)
add_subdirectory(IPLicnsStatistics)
add_subdirectory(IPSessionSummary)
